pseudo merge from nlp

--- a/nlp.ipynb
+++ b/nlp.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,14 +29,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_9627/1699356385.py:9: DtypeWarning: Columns (13,266) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_122049/508973246.py:9: DtypeWarning: Columns (226,235) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})\n"
      ]
     }
@@ -50,7 +50,8 @@
     "combined_data = pd.read_csv('data/combined_data.csv', index_col='id', dtype={'type': str})\n",
     "combined_data_translated = pd.read_csv('data/combined_data_translated.csv', index_col='id', dtype={'type': str})\n",
     "combined_data_fully_translated = pd.read_csv('data/combined_data_fully_translated.csv', index_col='id', dtype={'type': str})\n",
-    "prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})"
+    "prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})\n",
+    "text = pd.read_csv('data/text.csv', index_col='id', dtype={'type': str})"
    ]
   },
   {
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,16 +269,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "text = data[['text_features','type']]"
+    "text = data[['text_features','type','source']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -285,19 +286,55 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 18,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "# check for type contained in texts"
+    "data = text.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = prep.copy()"
+    "data.text_features = data.text_features.apply(lambda x: x.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = data[data.text_features != '']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data.to_csv('data/text.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# check for type contained in texts  ~ rule based"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = text.copy()"
    ]
   },
   {
@@ -326,30 +363,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['medal', 'photo', 'photo negative', 'a letter', 'coin',\n",
-       "       'label/sign', 'script, song/vocal music', 'sheet music', 'slide',\n",
-       "       'archaeological find', 'book', 'plan', 'postcard', 'there/imprint',\n",
+       "array(['medal', 'photo', 'photo negative', 'letter', 'coin', 'label/sign',\n",
+       "       'script, song/vocal music', 'music sheet', 'slide',\n",
+       "       'archaeological find', 'book', 'plan', 'postcard', 'seal/imprint',\n",
        "       'poster', 'design/drawing/sketch', 'audio recording', 'manuscript',\n",
        "       'document', 'caricature', 'graphics', 'telegram',\n",
-       "       'manuscript, musical composition', 'notes', 'in small print',\n",
+       "       'manuscript, musical composition', 'notes', 'small print',\n",
        "       'invitation', 'packaging', 'paper', 'manuscript, sheet music',\n",
-       "       'magazines', 'album', 'in the country', 'digital image',\n",
+       "       'magazines', 'album', 'country', 'digital image',\n",
        "       'photo, postcard', 'photographic material', 'drawing', 'crate/box',\n",
        "       'letter of honor/honorary address', 'calendar', 'tape/ribbon',\n",
        "       'bag', 'newspaper', 'dish/vessel', 'musical instrument',\n",
-       "       'letter, postcard', 'sculpture', 'printed notes', 'there',\n",
-       "       'a suit', 'certificate', 'sheet/linen', 'folder/booklet', 'jewel',\n",
-       "       'doll', 'photographic negative, photographic negative'],\n",
-       "      dtype=object)"
+       "       'letter, postcard', 'sculpture', 'printed notes', 'seal', 'suit',\n",
+       "       'certificate', 'sheet/linen', 'folder/booklet', 'jewel', 'doll',\n",
+       "       'photographic negative, photographic negative'], dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,6 +446,394 @@
     "print('multiple types in text - one type in text - one type and true type in text')\n",
     "print(multi_counter, one_counter, true_counter)\n",
     "# from 14900 texts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# gpt3 embeddings\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = text.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n",
+      "sleeping\n"
+     ]
+    }
+   ],
+   "source": [
+    "import openai\n",
+    "import time\n",
+    "openai.api_key = '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'\n",
+    "\n",
+    "def get_embedding(text, model=\"text-similarity-davinci-001\"):\n",
+    "    text = text.replace(\"\\n\", \" \")\n",
+    "    try:\n",
+    "        result = openai.Embedding.create(input = [text], model=model)['data'][0]['embedding']\n",
+    "    except:\n",
+    "        print('sleeping')\n",
+    "        time.sleep(60)\n",
+    "        result = openai.Embedding.create(input = [text], model=model)['data'][0]['embedding']\n",
+    "    return result\n",
+    " \n",
+    "text['babbage_similarity'] = text.text_features.apply(lambda x: get_embedding(x, model='text-similarity-curie-001'))\n",
+    "#df['babbage_search'] = text.text_features.apply(lambda x: get_embedding(x, model='text-search-babbage-doc-001'))\n",
+    "text.to_csv('data/curie.csv', index=False)   \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text.to_csv('data/embedded_1k_reviews.csv', index=True)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('data/embedded_1k_reviews.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_emb = df[df.source == 'train']\n",
+    "test_emb = df[df.source == 'test']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_emb.to_csv('data/train_emb.csv', index=True)\n",
+    "test_emb.to_csv('data/test_emb.csv', index=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# rf on embedding"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('data/train_emb.csv', index_col='id', dtype={'type': str})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df['babbage_similarity'] = df.babbage_similarity.apply(eval).apply(np.array)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    " \n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    list(df.babbage_similarity.values),\n",
+    "    df.type,\n",
+    "    test_size = 0.2,\n",
+    "    random_state=42\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                              precision    recall  f1-score   support\n",
+      "\n",
+      "                                       album       0.00      0.00      0.00         3\n",
+      "                         archaeological find       0.97      0.99      0.98       171\n",
+      "                             audio recording       0.00      0.00      0.00        12\n",
+      "                                         bag       1.00      0.33      0.50         3\n",
+      "                                        book       0.74      0.77      0.75       111\n",
+      "                                    calendar       0.00      0.00      0.00         4\n",
+      "                                  caricature       0.00      0.00      0.00         8\n",
+      "                                 certificate       0.00      0.00      0.00         2\n",
+      "                                        coin       1.00      0.94      0.97        35\n",
+      "                                     country       0.00      0.00      0.00         4\n",
+      "                                   crate/box       0.00      0.00      0.00         2\n",
+      "                       design/drawing/sketch       0.96      0.97      0.97       160\n",
+      "                               digital image       1.00      0.83      0.91        41\n",
+      "                                 dish/vessel       0.00      0.00      0.00         4\n",
+      "                                    document       0.89      0.12      0.22        64\n",
+      "                                        doll       0.00      0.00      0.00         1\n",
+      "                                     drawing       0.00      0.00      0.00        13\n",
+      "                              folder/booklet       0.00      0.00      0.00         4\n",
+      "                                    graphics       0.94      0.34      0.50        44\n",
+      "                                  invitation       0.67      0.13      0.22        15\n",
+      "                                       jewel       1.00      0.33      0.50         3\n",
+      "                                  label/sign       0.00      0.00      0.00         8\n",
+      "                                      letter       0.84      0.83      0.84       102\n",
+      "            letter of honor/honorary address       0.00      0.00      0.00         7\n",
+      "                            letter, postcard       0.00      0.00      0.00         1\n",
+      "                                   magazines       0.92      0.50      0.65        22\n",
+      "                                  manuscript       0.58      0.61      0.60        88\n",
+      "             manuscript, musical composition       0.50      0.12      0.20         8\n",
+      "                     manuscript, sheet music       1.00      0.60      0.75         5\n",
+      "                                       medal       1.00      0.82      0.90        17\n",
+      "                                 music sheet       0.97      0.54      0.69        52\n",
+      "                          musical instrument       0.00      0.00      0.00         8\n",
+      "                                   newspaper       0.00      0.00      0.00        14\n",
+      "                                       notes       0.00      0.00      0.00         5\n",
+      "                                       photo       0.52      0.94      0.67       370\n",
+      "                              photo negative       0.73      0.82      0.77       267\n",
+      "                             photo, postcard       1.00      0.11      0.20         9\n",
+      "                       photographic material       0.00      0.00      0.00         5\n",
+      "photographic negative, photographic negative       1.00      1.00      1.00         1\n",
+      "                                        plan       0.80      0.78      0.79       114\n",
+      "                                    postcard       0.93      0.65      0.76        20\n",
+      "                                      poster       0.90      0.88      0.89       120\n",
+      "                               printed notes       0.00      0.00      0.00         3\n",
+      "                    script, song/vocal music       0.82      0.80      0.81        40\n",
+      "                                   sculpture       0.00      0.00      0.00         7\n",
+      "                                        seal       0.00      0.00      0.00         7\n",
+      "                                seal/imprint       1.00      0.86      0.92        35\n",
+      "                                 sheet/linen       0.00      0.00      0.00         4\n",
+      "                                       slide       1.00      0.11      0.20         9\n",
+      "                                 small print       1.00      0.04      0.08        23\n",
+      "                                        suit       0.00      0.00      0.00         4\n",
+      "                                 tape/ribbon       0.00      0.00      0.00         3\n",
+      "                                    telegram       1.00      0.62      0.77         8\n",
+      "\n",
+      "                                    accuracy                           0.74      2090\n",
+      "                                   macro avg       0.48      0.33      0.36      2090\n",
+      "                                weighted avg       0.74      0.74      0.71      2090\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/till/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/till/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/till/.local/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1334: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report, accuracy_score\n",
+    " \n",
+    "clf = RandomForestClassifier(n_estimators=1000)\n",
+    "clf.fit(X_train, y_train)\n",
+    "preds = clf.predict(X_test)\n",
+    "probas = clf.predict_proba(X_test)\n",
+    "\n",
+    "report = classification_report(y_test, preds)\n",
+    "print(report)"
    ]
   }
  ],
