--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -60,7 +60,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# tabnet\n"
+    "# xg boost\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import xgboost as xgb\n",
+    "from xgboost import XGBClassifier"
    ]
   },
   {
@@ -69,22 +79,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pytorch_tabnet.tab_model import TabNetClassifier, TabNetRegressor\n",
-    "\n",
-    "clf = TabNetClassifier()\n",
-    "clf.fit(\n",
-    "  X_train, y_train,\n",
-    "  eval_set=[(X_test, y_test)], patience=0\n",
-    ")\n",
-    "\n",
-    "preds = clf.predict(X_test)\n",
-    "probs = clf.predict_proba(X_test)"
+    "from xgboost import XGBClassifier\n",
+    "# read data\n",
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "data = load_iris()\n",
+    "X_train, X_test, y_train, y_test = train_test_split(data['data'], data['target'], test_size=.2)\n",
+    "# create model instance\n",
+    "bst = XGBClassifier(n_estimators=2, max_depth=2, learning_rate=1, objective='binary:logistic')\n",
+    "# fit model\n",
+    "bst.fit(X_train, y_train)\n",
+    "# make predictions\n",
+    "preds = bst.predict(X_test)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -100,6 +112,7 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
+  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
