--- a/nlp.ipynb
+++ b/nlp.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,18 +29,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_122049/508973246.py:9: DtypeWarning: Columns (226,235) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# dtype={'type': str} prevents being confused with data type for large data sets\n",
     "train = pd.read_csv('data/train.csv', index_col='id', dtype={'type': str})\n",
@@ -457,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -466,197 +457,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n",
-      "sleeping\n"
+      "13\n"
      ]
     }
    ],
    "source": [
     "import openai\n",
     "import time\n",
-    "openai.api_key = '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'\n",
-    "\n",
+    "openai.api_key = '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'\n",
+    "count = 0\n",
     "def get_embedding(text, model=\"text-similarity-davinci-001\"):\n",
+    "    global count\n",
+    "    count += 1\n",
     "    text = text.replace(\"\\n\", \" \")\n",
     "    try:\n",
     "        result = openai.Embedding.create(input = [text], model=model)['data'][0]['embedding']\n",
     "    except:\n",
-    "        print('sleeping')\n",
+    "        print(count)\n",
     "        time.sleep(60)\n",
     "        result = openai.Embedding.create(input = [text], model=model)['data'][0]['embedding']\n",
     "    return result\n",
     " \n",
-    "text['babbage_similarity'] = text.text_features.apply(lambda x: get_embedding(x, model='text-similarity-curie-001'))\n",
-    "#df['babbage_search'] = text.text_features.apply(lambda x: get_embedding(x, model='text-search-babbage-doc-001'))\n",
+    "text['curie_similarity'] = text.text_features.apply(lambda x: get_embedding(x, model='text-similarity-curie-001'))\n",
     "text.to_csv('data/curie.csv', index=False)   \n"
    ]
   },
