--- a/nlp.ipynb
+++ b/nlp.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,9 @@
     "combined_data_translated = pd.read_csv('data/combined_data_translated.csv', index_col='id', dtype={'type': str})\n",
     "combined_data_fully_translated = pd.read_csv('data/combined_data_fully_translated.csv', index_col='id', dtype={'type': str})\n",
     "prep = pd.read_csv('data/prep.csv', index_col='id', dtype={'type': str})\n",
-    "text = pd.read_csv('data/text.csv', index_col='id', dtype={'type': str})"
+    "text = pd.read_csv('data/text.csv', index_col='id', dtype={'type': str})\n",
+    "babbage = pd.read_csv('data/embedded_1k_reviews.csv', index_col='id', dtype={'type': str})\n",
+    "curie = pd.read_csv('data/curie.csv', dtype={'type': str})"
    ]
   },
   {
@@ -278,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +466,492 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13\n"
+      "13\n",
+      "52\n",
+      "97\n",
+      "148\n",
+      "185\n",
+      "228\n",
+      "277\n",
+      "323\n",
+      "359\n",
+      "398\n",
+      "441\n",
+      "477\n",
+      "512\n",
+      "554\n",
+      "597\n",
+      "636\n",
+      "675\n",
+      "712\n",
+      "747\n",
+      "786\n",
+      "831\n",
+      "868\n",
+      "911\n",
+      "951\n",
+      "997\n",
+      "1046\n",
+      "1097\n",
+      "1137\n",
+      "1172\n",
+      "1209\n",
+      "1254\n",
+      "1293\n",
+      "1327\n",
+      "1362\n",
+      "1409\n",
+      "1448\n",
+      "1483\n",
+      "1530\n",
+      "1573\n",
+      "1608\n",
+      "1639\n",
+      "1681\n",
+      "1725\n",
+      "1769\n",
+      "1805\n",
+      "1857\n",
+      "1905\n",
+      "1946\n",
+      "2000\n",
+      "2042\n",
+      "2081\n",
+      "2124\n",
+      "2158\n",
+      "2193\n",
+      "2225\n",
+      "2264\n",
+      "2304\n",
+      "2355\n",
+      "2394\n",
+      "2436\n",
+      "2479\n",
+      "2513\n",
+      "2555\n",
+      "2596\n",
+      "2629\n",
+      "2668\n",
+      "2709\n",
+      "2759\n",
+      "2809\n",
+      "2839\n",
+      "2884\n",
+      "2927\n",
+      "2963\n",
+      "3010\n",
+      "3054\n",
+      "3103\n",
+      "3152\n",
+      "3198\n",
+      "3246\n",
+      "3296\n",
+      "3338\n",
+      "3379\n",
+      "3425\n",
+      "3466\n",
+      "3512\n",
+      "3548\n",
+      "3591\n",
+      "3640\n",
+      "3681\n",
+      "3720\n",
+      "3766\n",
+      "3821\n",
+      "3862\n",
+      "3904\n",
+      "3948\n",
+      "3989\n",
+      "4034\n",
+      "4078\n",
+      "4117\n",
+      "4147\n",
+      "4178\n",
+      "4212\n",
+      "4250\n",
+      "4280\n",
+      "4324\n",
+      "4370\n",
+      "4406\n",
+      "4436\n",
+      "4484\n",
+      "4518\n",
+      "4559\n",
+      "4595\n",
+      "4648\n",
+      "4683\n",
+      "4722\n",
+      "4754\n",
+      "4805\n",
+      "4852\n",
+      "4900\n",
+      "4950\n",
+      "4988\n",
+      "5036\n",
+      "5072\n",
+      "5119\n",
+      "5157\n",
+      "5196\n",
+      "5224\n",
+      "5257\n",
+      "5298\n",
+      "5350\n",
+      "5394\n",
+      "5427\n",
+      "5468\n",
+      "5513\n",
+      "5554\n",
+      "5592\n",
+      "5640\n",
+      "5679\n",
+      "5718\n",
+      "5754\n",
+      "5801\n",
+      "5850\n",
+      "5898\n",
+      "5934\n",
+      "5975\n",
+      "6022\n",
+      "6054\n",
+      "6106\n",
+      "6142\n",
+      "6177\n",
+      "6220\n",
+      "6260\n",
+      "6299\n",
+      "6326\n",
+      "6378\n",
+      "6423\n",
+      "6459\n",
+      "6506\n",
+      "6549\n",
+      "6592\n",
+      "6637\n",
+      "6677\n",
+      "6725\n",
+      "6764\n",
+      "6807\n",
+      "6860\n",
+      "6900\n",
+      "6952\n",
+      "7001\n",
+      "7035\n",
+      "7076\n",
+      "7125\n",
+      "7166\n",
+      "7213\n",
+      "7264\n",
+      "7309\n",
+      "7354\n",
+      "7404\n",
+      "7449\n",
+      "7483\n",
+      "7524\n",
+      "7559\n",
+      "7593\n",
+      "7633\n",
+      "7682\n",
+      "7736\n",
+      "7775\n",
+      "7814\n",
+      "7862\n",
+      "7907\n",
+      "7956\n",
+      "8002\n",
+      "8042\n",
+      "8073\n",
+      "8111\n",
+      "8158\n",
+      "8204\n",
+      "8245\n",
+      "8272\n",
+      "8314\n",
+      "8352\n",
+      "8397\n",
+      "8433\n",
+      "8470\n",
+      "8516\n",
+      "8565\n",
+      "8600\n",
+      "8629\n",
+      "8664\n",
+      "8712\n",
+      "8757\n",
+      "8783\n",
+      "8833\n",
+      "8879\n",
+      "8927\n",
+      "8965\n",
+      "9005\n",
+      "9041\n",
+      "9089\n",
+      "9137\n",
+      "9174\n",
+      "9224\n",
+      "9265\n",
+      "9304\n",
+      "9339\n",
+      "9376\n",
+      "9416\n",
+      "9452\n",
+      "9488\n",
+      "9518\n",
+      "9556\n",
+      "9605\n",
+      "9645\n",
+      "9683\n",
+      "9723\n",
+      "9756\n",
+      "9803\n",
+      "9845\n",
+      "9886\n",
+      "9925\n",
+      "9968\n",
+      "10004\n",
+      "10044\n",
+      "10088\n",
+      "10120\n",
+      "10162\n",
+      "10205\n",
+      "10244\n",
+      "10284\n",
+      "10331\n",
+      "10374\n",
+      "10413\n",
+      "10446\n",
+      "10485\n",
+      "10522\n",
+      "10564\n",
+      "10604\n",
+      "10643\n",
+      "10689\n",
+      "10739\n",
+      "10777\n",
+      "10820\n",
+      "10856\n",
+      "10893\n",
+      "10935\n",
+      "10967\n",
+      "11008\n",
+      "11049\n",
+      "11101\n",
+      "11145\n",
+      "11196\n",
+      "11228\n",
+      "11259\n",
+      "11308\n",
+      "11351\n",
+      "11388\n",
+      "11430\n",
+      "11462\n",
+      "11503\n",
+      "11546\n",
+      "11569\n",
+      "11612\n",
+      "11656\n",
+      "11703\n",
+      "11743\n",
+      "11780\n",
+      "11826\n",
+      "11864\n",
+      "11910\n",
+      "11960\n",
+      "12002\n",
+      "12034\n",
+      "12082\n",
+      "12111\n",
+      "12146\n",
+      "12198\n",
+      "12240\n",
+      "12284\n",
+      "12328\n",
+      "12380\n",
+      "12421\n",
+      "12461\n",
+      "12489\n",
+      "12532\n",
+      "12576\n",
+      "12621\n",
+      "12663\n",
+      "12704\n",
+      "12744\n",
+      "12791\n",
+      "12833\n",
+      "12867\n",
+      "12919\n",
+      "12964\n",
+      "13003\n",
+      "13047\n",
+      "13083\n",
+      "13106\n",
+      "13140\n",
+      "13179\n",
+      "13203\n",
+      "13237\n",
+      "13267\n",
+      "13304\n",
+      "13335\n",
+      "13376\n",
+      "13412\n",
+      "13445\n",
+      "13489\n",
+      "13522\n",
+      "13565\n",
+      "13597\n",
+      "13636\n",
+      "13692\n",
+      "13733\n",
+      "13772\n",
+      "13814\n",
+      "13865\n",
+      "13910\n",
+      "13951\n",
+      "13993\n",
+      "14035\n",
+      "14073\n",
+      "14111\n",
+      "14140\n",
+      "14189\n",
+      "14229\n",
+      "14270\n",
+      "14316\n",
+      "14366\n",
+      "14409\n",
+      "14443\n",
+      "14482\n",
+      "14520\n",
+      "14554\n",
+      "14596\n",
+      "14639\n",
+      "14674\n",
+      "14710\n",
+      "14755\n",
+      "14793\n",
+      "14826\n",
+      "14875\n",
+      "14921\n",
+      "14960\n",
+      "14994\n",
+      "15046\n",
+      "15072\n",
+      "15122\n",
+      "15167\n",
+      "15218\n",
+      "15262\n",
+      "15316\n",
+      "15353\n",
+      "15401\n",
+      "15433\n",
+      "15482\n",
+      "15521\n",
+      "15551\n",
+      "15598\n",
+      "15642\n",
+      "15685\n",
+      "15720\n",
+      "15761\n",
+      "15806\n",
+      "15847\n",
+      "15889\n",
+      "15926\n",
+      "15973\n",
+      "16010\n",
+      "16047\n",
+      "16088\n",
+      "16132\n",
+      "16173\n",
+      "16213\n",
+      "16264\n",
+      "16296\n",
+      "16342\n",
+      "16382\n",
+      "16430\n",
+      "16475\n",
+      "16516\n",
+      "16559\n",
+      "16600\n",
+      "16637\n",
+      "16685\n",
+      "16717\n",
+      "16756\n",
+      "16799\n",
+      "16840\n",
+      "16891\n",
+      "16928\n",
+      "16965\n",
+      "17016\n",
+      "17046\n",
+      "17093\n",
+      "17137\n",
+      "17181\n",
+      "17212\n",
+      "17263\n",
+      "17308\n",
+      "17343\n",
+      "17390\n",
+      "17429\n",
+      "17468\n",
+      "17495\n",
+      "17548\n",
+      "17590\n",
+      "17635\n",
+      "17665\n",
+      "17702\n",
+      "17749\n",
+      "17780\n",
+      "17823\n",
+      "17866\n",
+      "17901\n",
+      "17941\n",
+      "17975\n",
+      "18018\n",
+      "18058\n",
+      "18097\n",
+      "18138\n",
+      "18180\n",
+      "18227\n",
+      "18278\n",
+      "18320\n",
+      "18356\n",
+      "18396\n",
+      "18434\n",
+      "18484\n",
+      "18534\n",
+      "18579\n",
+      "18613\n",
+      "18653\n",
+      "18685\n",
+      "18730\n",
+      "18782\n",
+      "18827\n",
+      "18868\n",
+      "18921\n",
+      "18965\n",
+      "19011\n",
+      "19050\n",
+      "19085\n",
+      "19129\n",
+      "19166\n",
+      "19207\n",
+      "19253\n",
+      "19290\n",
+      "19339\n",
+      "19379\n",
+      "19428\n",
+      "19466\n",
+      "19514\n",
+      "19544\n",
+      "19583\n",
+      "19623\n",
+      "19672\n",
+      "19717\n",
+      "19757\n",
+      "19792\n",
+      "19834\n",
+      "19872\n",
+      "19920\n",
+      "19958\n",
+      "19991\n"
      ]
     }
    ],
@@ -491,20 +978,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "text.to_csv('data/embedded_1k_reviews.csv', index=True)  "
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('data/embedded_1k_reviews.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20000"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(text)"
    ]
   },
   {
@@ -523,8 +1021,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_emb.to_csv('data/train_emb.csv', index=True)\n",
-    "test_emb.to_csv('data/test_emb.csv', index=True)"
+    "train_emb.to_csv('data/train_curie.csv', index=True)\n",
+    "test_emb.to_csv('data/test_curie.csv', index=True)"
    ]
   },
   {
