--- a/random_forest.ipynb
+++ b/random_forest.ipynb
@@ -60,6 +60,45 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# setup data for classifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = train_prep.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "features = data.drop('type', axis=1)\n",
+    "labels = data.type\n",
+    "# at least xgboost cannot deal with string labels\n",
+    "label_encoder = LabelEncoder()\n",
+    "label_encoder = label_encoder.fit(labels)\n",
+    "labels = label_encoder.transform(labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(features, labels, test_size=0.0001, random_state=0)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# setup rf classifier"
    ]
   },
@@ -131,6 +170,67 @@
     "\n",
     "# Start sweep job.\n",
     "wandb.agent(sweep_id, function=main, count=4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# submission from model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test_set = test_prep.drop('type', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = bst.predict(test_set)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission = pd.DataFrame({'id': test_set.index ,'type': bst.predict(test_set)})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type_lookup = pd.read_csv('data/type_lookup.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission = submission.replace(type_lookup.id.to_list(), type_lookup.estonian.to_list())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submission.to_csv('data/submission.csv', index=False)"
    ]
   }
  ],
