xg on full dataset

--- a/xgboost.ipynb
+++ b/xgboost.ipynb
@@ -118,16 +118,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9002380952380953"
+       "1.0"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,11 +191,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
-    "submission.to_csv('data/submission.csv', index=False)"
+    "submission.to_csv('data/submission_xgboost_full.csv', index=False)"
    ]
   },
   {
