--- a/adding_and_deleting_columns.ipynb
+++ b/adding_and_deleting_columns.ipynb
@@ -883,7 +883,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.10.6 ('data science': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -897,7 +897,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "f26856bb7eff3868cea7198e8b81762dc8127b6e1d735fb9fd248b964f39d85f"
+   }
   }
  },
  "nbformat": 4,
